@@ -1,3 +1,11 @@
+11 June 2009: Wouter
+	- Fix queries for type DS when forward or stub zones are there.
+	  They are performed to higherup domains, and thus treated as if
+	  going to higher zones when looking up the right forward or stub
+	  server.  This makes a stub pointing to a local server that has
+	  a local view of example.com signed with the same keys as are
+	  publicly used work.  Reported by Johan Ihren.
+
 9 June 2009: Wouter
 	- openssl key files are opened apache-style, when user is root and
 	  before chrooting.  This makes permissions on remote-control key 
